# learn-ffmpeg

./: .gitignore  CMakeLists.txt  README.md
docs/: ffmpeg-command-line.md  install-ffmpeg.md
includes/: app.h  common.h
includes/Core/: audio.h  image.h  recorder.h
includes/GUI/: window.h
includes/Utils/: header.h  spec.h
src/: app.cpp  main.cpp
src/Core/: audio.cpp  image.cpp  recorder.cpp
src/GUI/: window.cpp
src/Utils/: header.cpp  spec.cpp
